force-app/main/default/objects/SPEN_LandNorthSouthFinance__c/SPEN_LandNorthSouthFinance__c.object-meta.xml
<CustomObject>
    <description>Created as part of ESC-959</description>
    <label>Land North &amp; South Finance</label>
    <nameField>
        <displayFormat>LAF-{00000}</displayFormat>
        <label>Land North &amp; South Finance #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Land North &amp; South Finances</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>