force-app/main/default/objects/SPEN_LandNorthSouthFinance__c/fields/SPEN_Amount__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>