force-app/main/default/objects/SPEN_LandNorthSouthFinance__c/fields/SPEN_BudgetType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_BudgetType__c</fullName>
    <label>Budget Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Capex</fullName>
            </value>
            <value>
                <fullName>Estates (NTS From Capex Budget)</fullName>
            </value>
            <value>
                <fullName>Estates (PO&apos;s From Capex Budget)</fullName>
            </value>
            <value>
                <fullName>Estates (PO &amp; NTS - Wayleave Budget)</fullName>
            </value>
            <value>
                <fullName>Rechargeable</fullName>
            </value>
            <value>
                <fullName>Wayleave Budget</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>