force-app/main/default/objects/SPEN_LandNorthSouthFinance__c/fields/SPEN_BudgetYearRaised__c.field-meta.xml
<CustomField>
    <fullName>SPEN_BudgetYearRaised__c</fullName>
    <label>Budget Year Raised</label>
    <length>4</length>
    <type>Text</type>
</CustomField>