force-app/main/default/objects/SPEN_LandNorthSouthFinance__c/fields/SPEN_CICInvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CICInvoiceNumber__c</fullName>
    <label>CIC Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>