force-app/main/default/objects/SPEN_LandNorthSouthFinance__c/fields/SPEN_CurrentStatus__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CurrentStatus__c</fullName>
    <label>Current Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Invoice Required</fullName>
            </value>
            <value>
                <fullName>Fully Released</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>