force-app/main/default/objects/SPEN_LandNorthSouthFinance__c/fields/SPEN_DateCancelled__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DateCancelled__c</fullName>
    <label>Date Cancelled</label>
    <type>Date</type>
</CustomField>