force-app/main/default/objects/SPEN_LandNorthSouthFinance__c/fields/SPEN_DateofCICInvoice__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DateofCICInvoice__c</fullName>
    <label>Date of CIC Invoice</label>
    <type>Date</type>
</CustomField>