force-app/main/default/objects/SPEN_LandNorthSouthFinance__c/fields/SPEN_DateRaised__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DateRaised__c</fullName>
    <label>Date Raised</label>
    <type>Date</type>
</CustomField>