force-app/main/default/objects/SPEN_LandNorthSouthFinance__c/fields/SPEN_DateRequested__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DateRequested__c</fullName>
    <label>Date Requested</label>
    <type>Date</type>
</CustomField>