force-app/main/default/objects/SPEN_LandNorthSouthFinance__c/fields/SPEN_Escoms_ReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Escoms_ReferenceNumber__c</fullName>
    <label>Escoms/ Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>