force-app/main/default/objects/SPEN_LandNorthSouthFinance__c/fields/SPEN_ExistingPOIncreasedBy__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ExistingPOIncreasedBy__c</fullName>
    <label>Existing PO Increased By</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>