force-app/main/default/objects/SPEN_LandNorthSouthFinance__c/fields/SPEN_ExistingPOorPMONumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ExistingPOorPMONumber__c</fullName>
    <label>Existing PO or PMO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>