force-app/main/default/objects/SPEN_LandNorthSouthFinance__c/fields/SPEN_INDO_ICPInvolved__c.field-meta.xml
<CustomField>
    <fullName>SPEN_INDO_ICPInvolved__c</fullName>
    <label>INDO/ICP Involved</label>
    <length>255</length>
    <type>Text</type>
</CustomField>