force-app/main/default/objects/SPEN_LandNorthSouthFinance__c/fields/SPEN_Job__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Job__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Job</label>
    <referenceTo>SPEN_Job__c</referenceTo>
    <relationshipLabel>Land North &amp; South Finances</relationshipLabel>
    <relationshipName>SPEN_LandNorthFinances</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>