force-app/main/default/objects/SPEN_LandNorthSouthFinance__c/fields/SPEN_JobTitle__c.field-meta.xml
<CustomField>
    <fullName>SPEN_JobTitle__c</fullName>
    <formula>SPEN_Job__r.SPEN_JobTitle__c</formula>
    <label>Job Title</label>
    <type>Text</type>
</CustomField>