force-app/main/default/objects/SPEN_LandNorthSouthFinance__c/fields/SPEN_LandAssistant__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LandAssistant__c</fullName>
    <formula>SPEN_Job__r.SPEN_LandAssistant__r.FirstName + &apos; &apos; +  SPEN_Job__r.SPEN_LandAssistant__r.LastName</formula>
    <label>Land Assistant</label>
    <type>Text</type>
</CustomField>