force-app/main/default/objects/SPEN_LandNorthSouthFinance__c/fields/SPEN_LicenceArea__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LicenceArea__c</fullName>
    <formula>TEXT(SPEN_Job__r.SPEN_LicenseArea__c)</formula>
    <label>Licence Area</label>
    <type>Text</type>
</CustomField>