force-app/main/default/objects/SPEN_LandNorthSouthFinance__c/fields/SPEN_NewPOtoreplacedOld__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NewPOtoreplacedOld__c</fullName>
    <label>New PO to replaced Old</label>
    <length>255</length>
    <type>Text</type>
</CustomField>