force-app/main/default/objects/SPEN_LandNorthSouthFinance__c/fields/SPEN_NoofOldPOreplaced__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NoofOldPOreplaced__c</fullName>
    <label>No of Old PO replaced</label>
    <length>255</length>
    <type>Text</type>
</CustomField>