force-app/main/default/objects/SPEN_LandNorthSouthFinance__c/fields/SPEN_NTSCancelled_Rejected__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NTSCancelled_Rejected__c</fullName>
    <label>NTS Cancelled/Rejected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>