force-app/main/default/objects/SPEN_LandNorthSouthFinance__c/fields/SPEN_PaymentType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PaymentType__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PAO</fullName>
            </value>
            <value>
                <fullName>NTS</fullName>
            </value>
            <value>
                <fullName>Cheque Re-issue</fullName>
            </value>
            <value>
                <fullName>NTS Cheque Re-issue</fullName>
            </value>
            <value>
                <fullName>PONS Estates</fullName>
            </value>
            <value>
                <fullName>PONS Legal</fullName>
            </value>
            <value>
                <fullName>NTS Estates</fullName>
            </value>
            <value>
                <fullName>NTS NWA Payment</fullName>
            </value>
            <value>
                <fullName>Receipting</fullName>
            </value>
            <value>
                <fullName>Non-Self Invoicing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>