force-app/main/default/objects/SPEN_LandNorthSouthFinance__c/fields/SPEN_PMONumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PMONumber__c</fullName>
    <label>PMO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>