force-app/main/default/objects/SPEN_LandNorthSouthFinance__c/fields/SPEN_PO_NTSNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PO_NTSNumber__c</fullName>
    <label>PO/NTS Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>