force-app/main/default/objects/SPEN_LandNorthSouthFinance__c/fields/SPEN_ProjectNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ProjectNumber__c</fullName>
    <label>Project Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>