force-app/main/default/objects/SPEN_LandNorthSouthFinance__c/fields/SPEN_ReasonforCancellation_Status__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ReasonforCancellation_Status__c</fullName>
    <label>Reason for Cancellation / Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>