force-app/main/default/objects/SPEN_LandNorthSouthFinance__c/fields/SPEN_ReasonForPayment__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ReasonForPayment__c</fullName>
    <label>Reason For Payment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>