force-app/main/default/objects/SPEN_LandNorthSouthFinance__c/fields/SPEN_Requestor__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Requestor__c</fullName>
    <formula>IF(SPEN_Job__r.SPEN_ProjectManager__r.FirstName!=null &amp;&amp; SPEN_Job__r.SPEN_ProjectManager__r.FirstName!=null, SPEN_Job__r.SPEN_ProjectManager__r.FirstName + &apos; &apos; +  SPEN_Job__r.SPEN_ProjectManager__r.LastName, IF( ISPICKVAL(SPEN_Job__r.SPEN_Source__c, &apos;Email&apos;) , SPEN_Job__r.SPEN_CustomerEmail__c, null))</formula>
    <label>Requestor</label>
    <type>Text</type>
</CustomField>