force-app/main/default/objects/SPEN_LandNorthSouthFinance__c/fields/SPEN_StillRequired__c.field-meta.xml
<CustomField>
    <fullName>SPEN_StillRequired__c</fullName>
    <label>Still Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>