force-app/main/default/objects/SPEN_LandNorthSouthFinance__c/fields/SPEN_ValueofInvoiceRequested__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ValueofInvoiceRequested__c</fullName>
    <label>Value of Invoice Requested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>