force-app/main/default/objects/SPEN_LandNorthSouthFinance__c/fields/SPEN_Vendor__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Land North &amp; South Finances</relationshipLabel>
    <relationshipName>SPEN_LandNorthSouthFinances</relationshipName>
    <type>Lookup</type>
</CustomField>