force-app/main/default/objects/SPEN_LandNorthSouthFinance__c/validationRules/SPEN_BudgetYearRaisedRule.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_BudgetYearRaisedRule</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND(LEN(SPEN_BudgetYearRaised__c)&gt;=1,LEN(SPEN_BudgetYearRaised__c)&lt;4),NOT(REGEX(SPEN_BudgetYearRaised__c , &quot;[0-9]*&quot;)))</errorConditionFormula>
    <errorDisplayField>SPEN_BudgetYearRaised__c</errorDisplayField>
    <errorMessage>Please fill Budget Year Raised in YYYY format.</errorMessage>
</ValidationRule>