force-app/main/default/objects/SPEN_LandNorthSouthFinance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SPEN_BudgetType__c</columns>
    <columns>SPEN_Requestor__c</columns>
    <columns>SPEN_Vendor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>